--- a/kluster-bookstore/src/components/BookCard.module.css
+++ b/kluster-bookstore/src/components/BookCard.module.css
@@ -1,9 +1,39 @@
 .image {
   height: 300px;
-  width: 200px;
-  object-fit: contain;
+  width: 100%;
+  border-radius: 1.2rem;
 }
 
 .link {
   text-decoration: none;
+}
+
+.main__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  min-height: 520px;
+  min-width: 200px;
+  max-width: 240px;
+  border: 1px solid #ebf3e8;
+  border-radius: 1.2rem;
+  margin: 15px;
+  background-color: #ebf3e8;
+}
+
+.title {
+  font-size: 18px;
+  color: var(--color-primary);
+}
+
+.btn {
+  width: 100px;
+  height: 32px;
+  border-radius: 0.5rem;
+  background-color: var(--color-background-secondary);
+}
+
+.btn:hover {
+  color: var(--color-white);
+  cursor: pointer;
 }
