--- a/kluster-bookstore/src/index.css
+++ b/kluster-bookstore/src/index.css
@@ -5,3 +5,58 @@
 body {
   text-decoration: none;
 }
+
+:root {
+  /* Global variables to be defined here */
+  --color-background-primary: #ece3ce;
+  --color-background-secondary: #3a4d39;
+  --color-primary: #739072;
+  --color-white: #fff;
+  --color-black: #111;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+}
+html,
+body {
+  height: 100%;
+}
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  background-color: var(--color-background-black);
+  color: var(--color-primary);
+}
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+#root,
+#__next {
+  isolation: isolate;
+}
