--- a/kluster-bookstore/src/components/BookSection.module.css
+++ b/kluster-bookstore/src/components/BookSection.module.css
@@ -1,9 +1,9 @@
 .main__container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: start;
   align-items: center;
-  margin: 10px;
+  margin: 30px;
 }
 
 .section-title {
