--- a/kluster-bookstore/src/components/BookCard.module.css
+++ b/kluster-bookstore/src/components/BookCard.module.css
@@ -12,13 +12,32 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  min-height: 520px;
+  min-height: 600px;
   min-width: 200px;
   max-width: 240px;
   border: 1px solid #ebf3e8;
   border-radius: 1.2rem;
   margin: 15px;
   background-color: #ebf3e8;
+  padding: 4px 8px;
+}
+
+.button__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100px;
+}
+
+.para {
+  font-size: 16px;
+}
+
+.buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: space-between;
 }
 
 .title {
