--- a/kluster-bookstore/src/components/Cart.module.css
+++ b/kluster-bookstore/src/components/Cart.module.css
@@ -1,9 +1,14 @@
 .main__container {
   min-width: 100%;
-  min-height: 600px;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   align-items: start;
+  justify-content: start;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+  padding: 4px 8px;
+  background-color: #ebf3e8;
 }
 
 .image {
