--- a/kluster-bookstore/src/components/Cart.module.css
+++ b/kluster-bookstore/src/components/Cart.module.css
@@ -30,6 +30,8 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  width: 160px;
+  flex-wrap: wrap;
 }
 
 .title {
