--- a/kluster-bookstore/src/components/Cart.module.css
+++ b/kluster-bookstore/src/components/Cart.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: start;
   justify-content: start;
-  border: 1px solid black;
+  border: 1px solid green;
   border-radius: 0.5rem;
   padding: 4px 8px;
   background-color: #ebf3e8;
