--- a/kluster-bookstore/src/components/authorCard.module.css
+++ b/kluster-bookstore/src/components/authorCard.module.css
@@ -3,6 +3,10 @@
   width: 100%;
   border-radius: 1.2rem;
 }
+.image:hover {
+  scale: 1.02;
+  transition: 0.1s;
+}
 
 .link {
   text-decoration: none;
@@ -20,6 +24,7 @@
   margin: 15px;
   background-color: #ebf3e8;
   padding: 4px 8px;
+  border: 0.5px solid var(--color-background-secondary);
 }
 
 .title {
